--- a/prj.conf
+++ b/prj.conf
@@ -19,6 +19,28 @@ CONFIG_NET_IPV4=y
 CONFIG_NET_DHCPV4=y
 # Enable Ethernet as a Layer 2 protocol (this enables Ethernet support)
 CONFIG_NET_L2_ETHERNET=y
+# Enable UDP protocol support
+CONFIG_NET_UDP=y
+# Enable BSD socket API for easier network programming
+CONFIG_NET_SOCKETS=y
+# Disable POSIX socket names, we use zsock_* explicitly
+# (No assignment here; symbol may not exist in this Zephyr version)
+# Enable Ethernet driver for STM32 (STM32F767ZI has built-in Ethernet MAC)
+CONFIG_ETH_STM32_HAL=y
+# Enable network buffer management
+CONFIG_NET_BUF=y
+# Increase network buffer pools for better performance
+CONFIG_NET_PKT_RX_COUNT=16
+CONFIG_NET_PKT_TX_COUNT=16
+# Enable network management for monitoring connection status
+CONFIG_NET_MGMT=y
+CONFIG_NET_MGMT_EVENT=y
+# Increase network memory pools
+CONFIG_NET_BUF_RX_COUNT=16
+CONFIG_NET_BUF_TX_COUNT=16
+CONFIG_NET_BUF_DATA_SIZE=128
+# Enable network statistics for debugging
+CONFIG_NET_STATISTICS=y
 
 # ==================== GPIO & HARDWARE ====================
 # Enable GPIO (General Purpose Input/Output) for LED control
@@ -35,3 +57,7 @@ CONFIG_INIT_STACKS=y
 CONFIG_NEWLIB_LIBC=y
 # Enable floating point support in printf/sprintf functions
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
+# Enable POSIX API support
+# (Do not force-disable here; omit this in prj.conf)
+# Increase main thread stack size for networking
+CONFIG_MAIN_STACK_SIZE=4096
