--- a/prj.conf
+++ b/prj.conf
@@ -15,8 +15,13 @@ CONFIG_UART_CONSOLE=y
 CONFIG_NETWORKING=y
 # Enable IPv4 protocol support
 CONFIG_NET_IPV4=y
-# Enable DHCP client to automatically get IP address
-CONFIG_NET_DHCPV4=y
+# Disable DHCP client - using static IP instead
+CONFIG_NET_DHCPV4=n
+# Enable static IP configuration
+CONFIG_NET_CONFIG_SETTINGS=y
+CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.168.1.100"
+CONFIG_NET_CONFIG_MY_IPV4_NETMASK="255.255.255.0"
+CONFIG_NET_CONFIG_MY_IPV4_GW="192.168.1.1"
 # Enable Ethernet as a Layer 2 protocol (this enables Ethernet support)
 CONFIG_NET_L2_ETHERNET=y
 # Enable UDP protocol support
